# sieci

./: CMakeLists.txt  main.cpp
include/: config.hpp  factory.hpp  helpers.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage.hpp  storage_types.hpp  types.hpp
mocks/: nodes_mocks.hpp
src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage.cpp  storage_types.cpp
test/: global_functions_mock.hpp  main_gtest.cpp  nodes_mocks.hpp  test_Factory.cpp  test_Wfactory_mm.cpp  test_fabric.cpp  test_factory_io.cpp  test_factory_mm.cpp  test_nodes.cpp  test_nodes_mm.cpp  test_package.cpp  test_package_mm.cpp  test_package_pm.cpp
